# detectball

./: .gitignore  Makefile.in  README  configure  configure.ac
src/: Makefile.am  Makefile.in  main.cc
